# oot

./: .gitignore  .gitmodules  Cargo.toml  Makefile  mkfakesyms  spec
assets/xml/objects/: object_ahg.xml  object_bji.xml  object_boj.xml
data/: code_800F9280.data.s  rsp.rodata.s  rsp.text.s  rsp_boot.text.s  z_text.data.s
gliden64/: Cargo.toml  build.rs  wrapper.h
gliden64/src/: lib.rs
include/: fp.h  functions.h  macros.h  ultra64.h  z64scene.h
src/: port.c
src/boot/: boot_main.c  logutils.c
src/buffers/: heaps.c
src/code/: code_800AD920.c  code_800E4FE0.c  code_800EC960.c  code_800F7260.c  code_800F9280.c  code_800FC620.c  graph.c  main.c  sleep.c  z_DLF.c  z_actor.c  z_actor_dlftbls.c  z_construct.c  z_en_a_keep.c  z_kaleido_manager.c  z_kanfont.c  z_map_exp.c  z_map_mark.c  z_parameter.c  z_play.c  z_player_call.c  z_room.c  z_scene.c  z_scene_table.c  z_skelanime.c  z_sram.c  z_ss_sram.c  z_vismono.c
src/n64-fast3d-engine/: gfx_opengl.c  gfx_pc.c
src/overlays/actors/ovl_Bg_Mjin/: z_bg_mjin.c
src/overlays/actors/ovl_player_actor/: z_player.c
src/overlays/gamestates/ovl_file_choose/: z_file_choose.c
src/overlays/gamestates/ovl_title/: z_title.c
tools/: mkldscript.c
tools/ZAPD/ZAPD/: Globals.cpp  ZTexture.cpp
zeldaoot/: Cargo.toml
zeldaoot-assets/: Cargo.toml  build.rs  table.rs
zeldaoot-assets/src/: lib.rs
zeldaoot/src/: actor.rs  assets.rs  debug.rs  graph.rs  main.rs  rcp.rs  shrink_window.rs  view.rs
zeldaoot/src/gamestates/: mod.rs  title.rs  title_setup.rs
