[package]
name = "zeldaoot-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

[build-dependencies]
anyhow = "1.0"
convert_case = "0.5"
enum_dispatch = "0.3"
num-derive = "0.3"
num-traits = "0.2"
proc-macro2 = "1.0"
serde = {version = "1.0", features=["derive"]}
quote = "1.0"
quick-xml = {version = "0.22", features=["serialize"]}
serde-xml-rs = "0.5"
walkdir = "2.3"
