[package]
name = "zeldaoot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
enum_dispatch = "0.3"
env_logger = "0.9"
gliden64 = { path = "../gliden64" }
glutin = "0.28"
log = "0.4"
num-traits = "0.2"
quick-xml = {version = "0.22", features=["serialize"]}
serde = {version="1.0", features=["derive"]}
winit = "0.26"
